configure: fix libconfig optional install path usage
Fixes: https://github.com/OpenFastPath/ofp/issues/229

Signed-off-by: Matias Elo <matias.elo@nokia.com>

--- a/configure.ac
+++ b/configure.ac
@@ -128,6 +128,48 @@ if test "x${want_lto}" == xyes; then
 fi
 
 ##########################################################################
+# libconfig
+##########################################################################
+
+# Enable/disable libconfig
+AC_ARG_ENABLE([libconfig],
+    [  --enable-libconfig     Enable/disable use of libconfig],
+    [case "${enableval}" in
+        yes) use_libconfig=true ;;
+        no)  use_libconfig=false ;;
+        *) AC_MSG_ERROR([bad value ${enableval} for --enable-libconfig]) ;;
+    esac],[use_libconfig=true])
+AM_CONDITIONAL([OFP_USE_LIBCONFIG], [test x$use_libconfig = xtrue])
+AM_COND_IF([OFP_USE_LIBCONFIG], [AM_CPPFLAGS="$AM_CPPFLAGS -DOFP_USE_LIBCONFIG"])
+
+# Introduce the optional configure parameter for a non-standard install prefix of libconfig
+AC_ARG_WITH([libconfig],
+    [AS_HELP_STRING([--with-libconfig=prefix],
+	[non-standard path prefix of libconfig install directory])],
+    [AM_CPPFLAGS="$AM_CPPFLAGS -I$with_libconfig/include"
+     AM_LDFLAGS="$AM_LDFLAGS -L$with_libconfig/lib"
+     export PKG_CONFIG_PATH="$with_libconfig/lib/pkgconfig:$PKG_CONFIG_PATH"],
+    [])
+
+if test x$use_libconfig = xtrue ; then
+# Save and set temporary compilation flags
+  OLD_LDFLAGS=$LDFLAGS
+  OLD_CPPFLAGS=$CPPFLAGS
+  LDFLAGS="$AM_LDFLAGS $LDFLAGS"
+  CPPFLAGS="$AM_CPPFLAGS $CPPFLAGS"
+
+  AC_CHECK_HEADERS([libconfig.h], [
+      AC_DEFINE(HAVE_LIBCONFIG, [1], [Have libconfig])], [])
+
+  AC_SEARCH_LIBS([config_init],[config],[], [
+      AC_MSG_ERROR([Unable to find libconfig library])])
+
+# Restore old saved variables
+  LDFLAGS=$OLD_LDFLAGS
+  CPPFLAGS=$OLD_CPPFLAGS
+fi
+
+##########################################################################
 # adding the ODP library (e.g. with static name 'libodp-linux.a')
 ##########################################################################
 
@@ -247,18 +289,6 @@ AC_ARG_ENABLE([mtrie],
     esac],[use_mtrie=true])
 AM_CONDITIONAL([OFP_MTRIE], [test x$use_mtrie = xtrue])
 AM_COND_IF([OFP_MTRIE], [AM_CPPFLAGS="$AM_CPPFLAGS -DMTRIE"])
-
-# Enable/disable libconfig use
-AC_ARG_ENABLE([libconfig],
-    [  --enable-libconfig     Enable/disable use of libconfig],
-    [case "${enableval}" in
-        yes) use_libconfig=true ;;
-        no)  use_libconfig=false ;;
-        *) AC_MSG_ERROR([bad value ${enableval} for --enable-libconfig]) ;;
-    esac],[use_libconfig=true])
-AM_CONDITIONAL([OFP_USE_LIBCONFIG], [test x$use_libconfig = xtrue])
-AM_COND_IF([OFP_USE_LIBCONFIG], [AM_CPPFLAGS="$AM_CPPFLAGS -DOFP_USE_LIBCONFIG"])
-
 
 # Enable/disable CLI use
 AC_ARG_ENABLE([cli],
@@ -385,32 +415,6 @@ else
     AC_SEARCH_LIBS([rumpns_rt_inithead],[rumpnet])
     AC_SEARCH_LIBS([rump_init],[rump])
     AC_SEARCH_LIBS([rumpuser_init],[rumpuser])
-fi
-
-##########################################################################
-# libconfig
-##########################################################################
-
-# introduce the optional configure parameter for a non-standard install prefix of libconfig
-AC_ARG_WITH([libconfig],
-    [AS_HELP_STRING([--with-libconfig=prefix],
-	[non-standard path prefix of libconfig install directory])],
-    [LIBCONFIGPATHSET=1],
-    [LIBCONFIGPATHSET=0])
-
-if test x$use_libconfig = xtrue ; then
-   LIBS="-lconfig $LIBS"
-   if test $LIBCONFIGPATHSET = 1 ; then
-      # if optional parameter used, provide paths for compiler and linker
-      AM_CPPFLAGS="$AM_CPPFLAGS -I$with_libconfig/include"
-      AM_LDFLAGS="$AM_LDFLAGS -L$with_libconfig/lib"
-   fi
-
-   AC_CHECK_HEADERS([libconfig.h], [
-      AC_DEFINE(HAVE_LIBCONFIG, [1], [Have libconfig])], [])
-
-   AC_SEARCH_LIBS([config_init],[config],[], [
-      AC_MSG_ERROR([Unable to find libconfig library])])
 fi
 
 ##########################################################################
