travis: add clang test
Signed-off-by: Matias Elo <matias.elo@nokia.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,10 @@ addons:
             - libtool
             - pkg-config
 
+compiler:
+    - gcc
+    - clang
+
 script: ./scripts/travis.sh
 
 jobs:
