--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -8,6 +8,8 @@ AM_CPPFLAGS += -I$(top_srcdir)/include/api
 
 LDADD = $(top_builddir)/lib/libofp.la
 
+LIBS  += $(OFP_LIBS)
+
 bin_PROGRAMS = cpp_test redefinitions_posix_test
 cpp_test_LDFLAGS = $(AM_LDFLAGS) -static
 redefinitions_posix_test_LDFLAGS = $(AM_LDFLAGS) -static
