--- a/test/benchmark/Makefile.am
+++ b/test/benchmark/Makefile.am
@@ -3,4 +3,6 @@ AM_CPPFLAGS += -I$(top_srcdir)/include/api -I$(top_srcdir)/include
 LDADD = $(top_builddir)/lib/libofp.la
 
 noinst_PROGRAMS = ipv4_fwd
-AM_LDFLAGS += -static-libtool-libs
+AM_LDFLAGS += -static
+
+LIBS  += $(OFP_LIBS)
