--- a/example/ofp_netwrap_proc/Makefile.am
+++ b/example/ofp_netwrap_proc/Makefile.am
@@ -5,5 +5,7 @@ AM_CPPFLAGS +=  -I$(top_srcdir)/include/api
 
 lib_LTLIBRARIES = $(LIB)/libofp_netwrap_proc.la
 
+__LIB__libofp_netwrap_proc_la_LDFLAGS = -shared
+
 __LIB__libofp_netwrap_proc_la_SOURCES = app_main.c
 
