scripts: Update checkpatch
Copy checkpatch files from odp v1.35.0.0.

Signed-off-by: Jere Leppänen <jere.leppanen@nokia.com>
Reviewed-by: Matias Elo <matias.elo@nokia.com>

--- a/.checkpatch.conf
+++ b/.checkpatch.conf
@@ -1,19 +1,23 @@
 --no-tree
 --strict
 --ignore=SPLIT_STRING
---ignore SSCANF_TO_KSTRTO
+--ignore=SSCANF_TO_KSTRTO
 --ignore=NEW_TYPEDEFS
 --ignore=DEPRECATED_VARIABLE
 --ignore=COMPARISON_TO_NULL
 --ignore=BIT_MACRO
---ignore=PREFER_PRINTF
---ignore=PREFER_SCANF
 --ignore=VOLATILE
 --ignore=AVOID_EXTERNS
 --ignore=CONST_STRUCT
+--ignore=ARRAY_SIZE
 --ignore=PREFER_KERNEL_TYPES
 --ignore=CONSTANT_COMPARISON
 --ignore=BLOCK_COMMENT_STYLE
 --ignore=UNNECESSARY_PARENTHESES
+--ignore=SPDX_LICENSE_TAG
+--ignore=PREFER_FALLTHROUGH
+--ignore=LONG_LINE_STRING
+--ignore=EMAIL_SUBJECT
+--ignore=C99_COMMENT_TOLERANCE
 --codespell
 --codespellfile=/usr/share/codespell/dictionary.txt
